# osm4pgrouting

./: .gitignore  CMakeLists.txt  README.md
src/cli/: CMakeLists.txt  osm4pgrouting.cpp
src/core/: CMakeLists.txt  ConfigurationParserCallback.cpp  Export2DB.cpp  Export2DB.h  Node.cpp  Node.h  OSMDocument.cpp  OSMDocument.h  OSMDocumentParser.cpp  OSMDocumentParser.h  OSMDocumentParserCallback.cpp  OSMDocumentParserCallback.h  Way.cpp  Way.h  WaySplitter.cpp  WaySplitter.h
src/sql/: CMakeLists.txt  split_func.sql  sql.h.in
