PROJECT(osm4pgrouting)

#Common
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})

#Core requerements
FIND_PACKAGE(PostgreSQL REQUIRED)
FIND_PACKAGE(EXPAT REQUIRED)
FIND_PACKAGE(Boost REQUIRED)

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_FILE_OFFSET_BITS=64")
SET (SHARE_DIR "/usr/share/osm4pgrouting")

#Options
SET (BUILD_SHARED_LIBS OFF) #DEFAULT STATIC LIBRARY
SET (WITH_CLI TRUE CACHE BOOL "Determines whether osm4pgrouting console app should be built")

#Main
ADD_SUBDIRECTORY(src/sql)
ADD_SUBDIRECTORY(src/core)

IF (WITH_CLI)
  ADD_SUBDIRECTORY(src/cli)
ENDIF(WITH_CLI)

INSTALL(FILES
    "${CMAKE_SOURCE_DIR}/LICENSE"
    "${CMAKE_SOURCE_DIR}/README.md"
    "${CMAKE_SOURCE_DIR}/mapconfig.xml"
    "${CMAKE_SOURCE_DIR}/mapconfig_for_cars.xml"
    DESTINATION "${SHARE_DIR}")
