
FILE(GLOB CORE_SRC "${CMAKE_SOURCE_DIR}/src/core/*.cpp" "${CMAKE_SOURCE_DIR}/src/core/*.h")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${PostgreSQL_INCLUDE_DIRS} ${EXPAT_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})

ADD_LIBRARY(osm4pgrouting ${CORE_SRC})
TARGET_LINK_LIBRARIES(osm4pgrouting ${PostgreSQL_LIBRARIES} ${EXPAT_LIBRARIES})

IF(BUILD_SHARED_LIBS)
INSTALL(TARGETS osm4pgrouting
  LIBRARY DESTINATION lib
)
ENDIF(BUILD_SHARED_LIBS)
